# Battleships

./: CMakeLists.txt  Difficulty.hh  FileHandling.hh  GameType.hh  Makefile  Mode.hh  Placement.hh  README.md  Randomness.hh  SaveToFile.hh  SuccessfulHit.hh  TileState.cpp  TileState.hh  file_handling.cpp  file_handling.hh  gameplay.cpp  gameplay.hh  get_input.cpp  get_input.hh  main.cpp  map_creation.cpp  map_creation.hh  player.cpp  player.hh  point.cpp  point.hh  ship.cpp  ship.hh  start_game.cpp  start_game.hh  validate_input.cpp  validate_input.hh
sample_input_files/: map5x5_4_ships_2.txt  map5x5_4ships_1.txt  multiplayer_game.txt  singleplayer_hard_game.txt
src/: main.cpp
src/enums/: BoatTypes.hh  Difficulty.hh  FileHandling.hh  GameType.hh  Mode.hh  Placement.hh  Randomness.hh  SaveToFile.hh  ShipTypes.cpp  ShipTypes.hh  SuccessfulHit.hh  TileState.cpp  TileState.hh
src/game/: gameplay.cpp  gameplay.hh  start_game.cpp  start_game.hh
src/input_handling/: file_handling.cpp  file_handling.hh  get_input.cpp  get_input.hh  map_creation.cpp  map_creation.hh  validate_input.cpp  validate_input.hh
src/structs/: game_settings.hh  player.cpp  player.hh  point.cpp  point.hh  ship.cpp  ship.hh
src/user_input_output/: colours.hh  file_handling.cpp  file_handling.hh  get_input.cpp  get_input.hh  map_creation.cpp  map_creation.hh  output_printing.cpp  output_printing.hh  validate_input.cpp  validate_input.hh
